--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -1,19 +1,19 @@
 <section class="mx-auto mt-12">
-  <script src="https://giscus.app/client.js"
-    data-repo="MythologyDevJihun/MythologyDevJihun.github.io"
-    data-repo-id="R_kgDONX0Jag"
-    data-category="Comment"
-    data-category-id="DIC_kwDONX0Jas4Ck2Dq"
-    data-mapping="pathname"
-    data-strict="0"
-    data-reactions-enabled="1"
-    data-emit-metadata="1"
-    data-input-position="bottom"
-    data-theme="preferred_color_scheme"
-    data-lang="ko"
-    crossorigin="anonymous"
-    async>
-  </script>
+<script src="https://giscus.app/client.js"
+        data-repo="MythologyDevSeoyeon/MythologyDevSeoyeon.github.io"
+        data-repo-id="R_kgDONaNRhw"
+        data-category="General"
+        data-category-id="DIC_kwDONaNRh84ClAS9"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="ko"
+        crossorigin="anonymous"
+        async>
+</script>
 </section>
 
 <script is:inline>
